[package]
name = "ReveeEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = "0.7"
globals = "1.0.2"

[lib]
name = "ReveeEngine"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]
